// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filterURL renders 0 1`] = `
Array [
  .c0 {
  -webkit-filter: url(0);
  filter: url(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(0);
  filter: url(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(0);
  filter: url(0);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(0);
  filter: url(0);
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders function 1`] = `
Array [
  .c0 {
  -webkit-filter: url(hasnot);
  filter: url(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(has);
  filter: url(has);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(hasnot);
  filter: url(hasnot);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(has);
  filter: url(has);
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter: url(invalid.path.1);
  filter: url(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(invalid.path.1);
  filter: url(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(invalid.path.1);
  filter: url(invalid.path.1);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(invalid.path.1);
  filter: url(invalid.path.1);
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders negative number 1`] = `
Array [
  .c0 {
  -webkit-filter: url(-54881);
  filter: url(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(-54881);
  filter: url(-54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(-42365);
  filter: url(-42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(-42365);
  filter: url(-42365);
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(July);
    filter: url(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(August);
    filter: url(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(September);
    filter: url(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: url(November);
    filter: url(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(July);
    filter: url(July);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(August);
    filter: url(August);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(September);
    filter: url(September);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: url(November);
    filter: url(November);
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(May);
    filter: url(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(June);
    filter: url(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(April);
    filter: url(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: url(November);
    filter: url(November);
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(May);
    filter: url(May);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(June);
    filter: url(June);
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-filter: url(April);
    filter: url(April);
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-filter: url(November);
    filter: url(November);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    -webkit-filter: url(July);
    filter: url(July);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(August);
    filter: url(August);
  }
}

@media January {
  .c0 {
    -webkit-filter: url(September);
    filter: url(September);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(November);
    filter: url(November);
  }
}

@media June {
  .c0 {
    -webkit-filter: url(August);
    filter: url(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-filter: url(July);
    filter: url(July);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(August);
    filter: url(August);
  }
}

@media January {
  .c0 {
    -webkit-filter: url(September);
    filter: url(September);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(November);
    filter: url(November);
  }
}

@media June {
  .c0 {
    -webkit-filter: url(August);
    filter: url(August);
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: url(January);
    filter: url(January);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(December);
    filter: url(December);
  }
}

@media January {
  .c0 {
    -webkit-filter: url(April);
    filter: url(April);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(May);
    filter: url(May);
  }
}

@media June {
  .c0 {
    -webkit-filter: url(June);
    filter: url(June);
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-filter: url(January);
    filter: url(January);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(December);
    filter: url(December);
  }
}

@media January {
  .c0 {
    -webkit-filter: url(April);
    filter: url(April);
  }
}

@media April {
  .c0 {
    -webkit-filter: url(May);
    filter: url(May);
  }
}

@media June {
  .c0 {
    -webkit-filter: url(June);
    filter: url(June);
  }
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-filter: url(54881);
  filter: url(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(54881);
  filter: url(54881);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(42365);
  filter: url(42365);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(42365);
  filter: url(42365);
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders string 1`] = `
Array [
  .c0 {
  -webkit-filter: url(July);
  filter: url(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(July);
  filter: url(July);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(June);
  filter: url(June);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(June);
  filter: url(June);
}

<div
    className="c0"
  />,
]
`;

exports[`filterURL renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-filter: url(DarkSlateBlue);
  filter: url(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(DarkSlateBlue);
  filter: url(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(DarkSlateBlue);
  filter: url(DarkSlateBlue);
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-filter: url(DarkSlateBlue);
  filter: url(DarkSlateBlue);
}

<div
    className="c0"
  />,
]
`;
